{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 150,
  "lineage": "e80ceab5-1616-ee6e-1318-31c614dfd54d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0836d779e787ecaee",
            "domain": "vpc",
            "id": "eipalloc-0836d779e787ecaee",
            "network_border_group": "ap-northeast-3",
            "public_dns": "ec2-15-168-203-193.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "15.168.203.193",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:814535836463:internet-gateway/igw-08de7c0863af53bbe",
            "id": "igw-08de7c0863af53bbe",
            "owner_id": "814535836463",
            "tags": {
              "Location": "Osaka",
              "Name": "coreCube",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "tags_all": {
              "Location": "Osaka",
              "Name": "coreCube",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "vpc_id": "vpc-0be8640f806fbe6fb"
          },
          "dependencies": [
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "coreCube_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-3:814535836463:loadbalancer/app/coreCube-load-balancer/3cf1b165e19a8a8d",
            "arn_suffix": "app/coreCube-load-balancer/3cf1b165e19a8a8d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "coreCube-load-balancer-1318726798.ap-northeast-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-3:814535836463:loadbalancer/app/coreCube-load-balancer/3cf1b165e19a8a8d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "coreCube-load-balancer",
            "security_groups": [
              "sg-00d54a5eb1e31cb5e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-038b07b3b6cad1c45"
              },
              {
                "subnet_id": "subnet-0bc5647ac9ad47869"
              },
              {
                "subnet_id": "subnet-0bcdf83aa42ea78b8"
              }
            ],
            "subnets": [
              "subnet-038b07b3b6cad1c45",
              "subnet-0bc5647ac9ad47869",
              "subnet-0bcdf83aa42ea78b8"
            ],
            "tags": {
              "Name": "coreCubeLoadBalancer",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "coreCube"
            },
            "tags_all": {
              "Name": "coreCubeLoadBalancer",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "coreCube"
            },
            "vpc_id": "vpc-0be8640f806fbe6fb",
            "zone_id": "Z5LXEXXYW11ES"
          },
          "dependencies": [
            "aws_security_group.coreCube-sg02-LB01",
            "aws_subnet.public-ap-northeast-3a",
            "aws_subnet.public-ap-northeast-3b",
            "aws_subnet.public-ap-northeast-3c",
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-3:814535836463:listener/app/coreCube-load-balancer/3cf1b165e19a8a8d/76189271ead1d8ca",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-3:814535836463:targetgroup/coreCube-target-group/8f5a5a5ddc67d729",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-3:814535836463:listener/app/coreCube-load-balancer/3cf1b165e19a8a8d/76189271ead1d8ca",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-3:814535836463:loadbalancer/app/coreCube-load-balancer/3cf1b165e19a8a8d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.coreCube_alb",
            "aws_lb_target_group.coreCube_tg",
            "aws_security_group.coreCube-sg02-LB01",
            "aws_subnet.public-ap-northeast-3a",
            "aws_subnet.public-ap-northeast-3b",
            "aws_subnet.public-ap-northeast-3c",
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "coreCube_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-3:814535836463:targetgroup/coreCube-target-group/8f5a5a5ddc67d729",
            "arn_suffix": "targetgroup/coreCube-target-group/8f5a5a5ddc67d729",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-3:814535836463:targetgroup/coreCube-target-group/8f5a5a5ddc67d729",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "coreCube-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Location": "Osaka",
              "Name": "coreCubeTargetGroup",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "tags_all": {
              "Location": "Osaka",
              "Name": "coreCubeTargetGroup",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0be8640f806fbe6fb"
          },
          "dependencies": [
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0836d779e787ecaee",
            "connectivity_type": "public",
            "id": "nat-0b77a8601127d7bcb",
            "network_interface_id": "eni-060ad88957355796a",
            "private_ip": "10.32.1.252",
            "public_ip": "15.168.203.193",
            "subnet_id": "subnet-038b07b3b6cad1c45",
            "tags": {
              "Location": "Osaka",
              "Name": "coreCube",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "tags_all": {
              "Location": "Osaka",
              "Name": "coreCube",
              "Owner": "Mcguffinn",
              "Service": "application1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-ap-northeast-3a",
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:814535836463:route-table/rtb-0bb145676b93046f6",
            "id": "rtb-0bb145676b93046f6",
            "owner_id": "814535836463",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b77a8601127d7bcb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be8640f806fbe6fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-ap-northeast-3a",
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:814535836463:route-table/rtb-0b9324ab91b6d022c",
            "id": "rtb-0b9324ab91b6d022c",
            "owner_id": "814535836463",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08de7c0863af53bbe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be8640f806fbe6fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ap-northeast-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f2ff031a4d0e98b",
            "route_table_id": "rtb-0bb145676b93046f6",
            "subnet_id": "subnet-049e518425f8e39e4"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-ap-northeast-3a",
            "aws_subnet.public-ap-northeast-3a",
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ap-northeast-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa205f89dd7b210c",
            "route_table_id": "rtb-0bb145676b93046f6",
            "subnet_id": "subnet-089b371f38ccbd1c3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-ap-northeast-3b",
            "aws_subnet.public-ap-northeast-3a",
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-ap-northeast-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d021665259dc0372",
            "route_table_id": "rtb-0b9324ab91b6d022c",
            "subnet_id": "subnet-038b07b3b6cad1c45"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-ap-northeast-3a",
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-ap-northeast-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01926e5b10fb9aa7a",
            "route_table_id": "rtb-0b9324ab91b6d022c",
            "subnet_id": "subnet-0bcdf83aa42ea78b8"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-ap-northeast-3b",
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "coreCube-sg01-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:814535836463:security-group/sg-09ec18e6d5bb4e40f",
            "description": "coreCube-sg01-servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ec18e6d5bb4e40f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyEvilBox",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyHomePage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "coreCube-sg01-servers",
            "name_prefix": "",
            "owner_id": "814535836463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Location": "Osaka",
              "Name": "coreCube-sg01-servers",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "tags_all": {
              "Location": "Osaka",
              "Name": "coreCube-sg01-servers",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be8640f806fbe6fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.coreCube"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "coreCube-sg02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:814535836463:security-group/sg-00d54a5eb1e31cb5e",
            "description": "coreCube-sg02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d54a5eb1e31cb5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyHomePage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "coreCube-sg02-LB01",
            "name_prefix": "",
            "owner_id": "814535836463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Location": "Osaka",
              "Name": "coreCube-sg02-LB01",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "tags_all": {
              "Location": "Osaka",
              "Name": "coreCube-sg02-LB01",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be8640f806fbe6fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-ap-northeast-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:814535836463:subnet/subnet-049e518425f8e39e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.32.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049e518425f8e39e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "814535836463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "Osaka",
              "Name": "private-ap-northeast-3a",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "tags_all": {
              "Location": "Osaka",
              "Name": "private-ap-northeast-3a",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "vpc_id": "vpc-0be8640f806fbe6fb"
          },
          "dependencies": [
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-ap-northeast-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:814535836463:subnet/subnet-089b371f38ccbd1c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.32.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089b371f38ccbd1c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "814535836463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "Osaka",
              "Name": "private-ap-northeast-3b",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "tags_all": {
              "Location": "Osaka",
              "Name": "private-ap-northeast-3b",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "vpc_id": "vpc-0be8640f806fbe6fb"
          },
          "dependencies": [
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-ap-northeast-3c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:814535836463:subnet/subnet-069dea34d5350d521",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.32.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069dea34d5350d521",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "814535836463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "Osaka",
              "Name": "private-ap-northeast-3c",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "tags_all": {
              "Location": "Osaka",
              "Name": "private-ap-northeast-3c",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "vpc_id": "vpc-0be8640f806fbe6fb"
          },
          "dependencies": [
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-ap-northeast-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:814535836463:subnet/subnet-038b07b3b6cad1c45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.32.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038b07b3b6cad1c45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "814535836463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "Osaka",
              "Name": "public-ap-northeast-3a",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "tags_all": {
              "Location": "Osaka",
              "Name": "public-ap-northeast-3a",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "vpc_id": "vpc-0be8640f806fbe6fb"
          },
          "dependencies": [
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-ap-northeast-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:814535836463:subnet/subnet-0bcdf83aa42ea78b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.32.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcdf83aa42ea78b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "814535836463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "Osaka",
              "Name": "public-ap-northeast-3b",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "tags_all": {
              "Location": "Osaka",
              "Name": "public-ap-northeast-3b",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "vpc_id": "vpc-0be8640f806fbe6fb"
          },
          "dependencies": [
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-ap-northeast-3c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:814535836463:subnet/subnet-0bc5647ac9ad47869",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.32.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc5647ac9ad47869",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "814535836463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "Osaka",
              "Name": "public-ap-northeast-3c",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "tags_all": {
              "Location": "Osaka",
              "Name": "public-ap-northeast-3c",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "vpc_id": "vpc-0be8640f806fbe6fb"
          },
          "dependencies": [
            "aws_vpc.coreCube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "coreCube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:814535836463:vpc/vpc-0be8640f806fbe6fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.32.0.0/16",
            "default_network_acl_id": "acl-0be1b15aa7705cc11",
            "default_route_table_id": "rtb-0c0e96561447c32e3",
            "default_security_group_id": "sg-04442e580b95365da",
            "dhcp_options_id": "dopt-0def565ce958e7df5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0be8640f806fbe6fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0e96561447c32e3",
            "owner_id": "814535836463",
            "tags": {
              "Location": "Osaka",
              "Name": "coreCube",
              "Owner": "Mcguffinn",
              "Service": "application1"
            },
            "tags_all": {
              "Location": "Osaka",
              "Name": "coreCube",
              "Owner": "Mcguffinn",
              "Service": "application1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}